logs/rst2xaml.log
Listing '.'...
Listing './bin'...
Compiling './bin/display_xaml.py'...
***   File "./bin/display_xaml.py", line 23
    print 'display_xaml [xaml_file]'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/rst2xaml.py'...
***   File "./bin/rst2xaml.py", line 14
    print USAGE
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/rst2xamlsl.py'...
***   File "./bin/rst2xamlsl.py", line 15
    print USAGE
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rst2xaml-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xamlwriter'...
Listing './lib/python3.5/site-packages/xamlwriter/modules'...
Compiling './lib/python3.5/site-packages/xamlwriter/modules/odict.py'...
***   File "./lib/python3.5/site-packages/xamlwriter/modules/odict.py", line 614
    raise TypeError, ('pop expected at most 2 arguments, got %s' %
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xamlwriter/tests'...
Compiling './lib/python3.5/site-packages/xamlwriter/tests/testpygments.py'...
***   File "./lib/python3.5/site-packages/xamlwriter/tests/testpygments.py", line 73
    print publish_xaml(source)
                     ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
